# netai

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  netai.excalidraw
backend/: .dockerignore  .env.skeleton  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21be56fe4e09_initialize_tables.py  39a3e07e2d4b_add_skill_description.py  5e2f8a9c1d2b_add_tool_source_to_toolcall.py  6e4f0ea79d33_add_conversation_archived_flag.py  7b2d5f7f9d21_add_skill_marketplace_and_slugs.py  7c9d2e4a1b3f_add_conversation_summary_and_archived.py  95778ca7ba37_initialize_tables.py  9f1c2a6d4b7e_use_hash_ids_for_conversation.py  a3ab223d0ba7_initialize_schema.py  b5f3f4d8c2a1_add_skills_tables.py  c2f8c42aa9d1_add_conversation_attachments.py  d4b2a7f3c981_add_user_custom_instructions.py
backend/app/: OpenAILLM.py  cli.py  generate_test_logs.py  llm.py  main.py  monitoring.py  skills_catalog.py  utils.py
backend/app/agents/: bitbucket_agent.py  datamodel_agent.py  network.py  orchestrator_agent.py  planner.py  security_agent.py  servicenow_agent.py  suzieq_agent.py  syslog_agent.py  zabbix_agent.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py  (+1 more)
backend/tests/: README.md  __init__.py  conftest.py
log_ingestor/: .env.skeleton  Cargo.toml  Dockerfile  README.md  generate_test_logs.py
log_ingestor/src/: config.rs  lib.rs  main.rs  pipeline.rs  types.rs  vendor_cache.rs
log_ingestor/tests/: test_vendor_examples.rs
(+195 files in other folders)
