[package]
name = "log_ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
regex = "1"
once_cell = "1"
futures = "0.3"
clickhouse = "0.13"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
